# acbm

./: .gitignore  .pre-commit-config.yaml  ASSUMPTIONS.md  BACKGROUND.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
config/: README.md  base.toml  base_500.toml  base_5000.toml  base_all.toml  base_all_msoa.toml  greater-london.toml  leeds.toml  leeds_with_travel_times.toml  london.toml
notebooks/: 1_prep_synthpop.ipynb  2.1_sandbox-match_households.ipynb  2_match_households_and_individuals.ipynb  3.1_locations_primary.ipynb  3.1_sandbox-locations_primary.ipynb  3.3_locations_secondary.ipynb  3_locations_primary.ipynb  4_locations_work.ipynb  5_validate_outputs.ipynb  6_acbm_to_matsim_xml.ipynb  Validation_AcBM_with_Cencus.ipynb  Validation_AcBM_with_Census.ipynb  Validation_SPC_with Cencus.ipynb  Validation_SPC_with Census copy.ipynb  Validation_SPC_with Census.ipynb  nts_and_census_eda.ipynb  sandbox_exploring_pam.ipynb  sandbox_zones_to_locations.ipynb  statistical_matching.ipynb  synthpop.ipynb
notebooks/R/: .gitignore  main.R
notebooks/demos/: 01_explore_outputs.ipynb
osmox/: config_osmox.json  osmox_notes.txt
scripts/: 0.1_run_osmox.py  0_leeds_msoas.py  0_preprocess_inputs.py  1_prep_synthpop.py  2.1_sandbox-match_households.py  2_match_households_and_individuals.py  3.1_assign_primary_feasible_zones.py  3.2.1_assign_primary_zone_edu.py  3.2.2_assign_primary_zone_work.py  3.2.3_assign_secondary_zone.py  3.2_assign_primary_facility.py  3.2_assign_primary_facility_work.py  3.3_assign_facility_all.py  3.3_assign_primary_facility_edu.py  3_locations_primary.py  4_locations_work.py  4_validation.py  5_acbm_to_matsim_xml.py  README.md  plot_commuting_flows.py  plot_fraction.py  plot_results.py  run_pipeline.py  run_pipeline.sh  summary_stats.py  validation_stats.py
src/acbm/: __init__.py  assigning.py  cli.py  config.py  logger_config.py  matching.py  preprocess.py  preprocessing.py  utils.py
src/acbm/assigning/: assigning.py  feasible_zones_primary.py  plots.py  primary_feasible.py  primary_select.py  secondary_select.py  select_facility.py  select_zone_primary.py  select_zone_secondary.py  select_zone_work.py  utils.py  work.py
src/acbm/postprocessing/: matsim.py
src/acbm/validating/: plots.py  utils.py
tests/: test_assigning.py  test_config.py  test_dummy.py  test_matching.py  test_utils.py
